# musicbox

./: .gitattributes  .gitignore  README.md  codified-daw-design-doc.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  render-demos.yml
00/c3a42ad95f/: metadata.json
00/c3a42ad95f/0/: metadata.json
0c/b856f19c45/: metadata.json
0c/b856f19c45/0/: metadata.json  prompt.txt
14/86bc0b62bf/: metadata.json
14/86bc0b62bf/0/: content_hash.txt  metadata.json
18/5bccbf8cd6/: metadata.json
18/5bccbf8cd6/0/: metadata.json
23/0916163761/: metadata.json
23/0916163761/0/: content_hash.txt  full.jsonl  metadata.json
33/aad13b3368/: metadata.json
33/aad13b3368/0/: full.jsonl  metadata.json
43/4672e00667/: metadata.json
43/4672e00667/0/: full.jsonl  metadata.json
4b/26945f6233/: metadata.json
4b/26945f6233/0/: content_hash.txt  metadata.json
4c/2522bb114b/: metadata.json
56/4594ff5cea/: metadata.json
61/2528271664/: metadata.json
66/347dd84856/: metadata.json
66/81cb8e8215/: metadata.json
70/903b83af7a/: metadata.json
80/e4935f102a/: metadata.json
88/40a4434ea0/: metadata.json
94/2323756315/: metadata.json
9a/b207229e8a/: metadata.json
b8/741c4abd15/: metadata.json
c6/0dc5430682/: metadata.json
cc/41c75fb7e9/: metadata.json
codaw/: __init__.py
codaw/arrangement/: __init__.py  mixer.py  pattern.py  song.py  track.py
codaw/components/: __init__.py  effects.py  events.py  instrument.py
codaw/core/: __init__.py  dsp.py  envelopes.py  filters.py  oscillators.py  signal.py
codaw/music/: __init__.py  pitch.py  scales.py  timing.py
d0/7a32eacfc4/: metadata.json
d6/f536008d8d/: metadata.json
e2/7debc3fe94/: metadata.json
f5/82247051f0/: metadata.json
f5/b8aee1dc72/: metadata.json
fb/2ad715edc7/: metadata.json
fd/f1abbe3dbd/: metadata.json
tests/: test_arrangement.py  test_dsp.py  test_effects.py  test_envelopes.py  test_filters.py  test_instruments.py  test_mvp.py  test_oscillators.py  test_pitch.py  test_scales.py  test_signal_ops.py  test_timing.py
(+42 files in other folders)
